# voronoizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  voronoizer.cabal
app/: Color.hs  Cost.hs  Divide.hs  FineTune.hs  Geometry.hs  Image.hs  Main.hs  Optimize.hs  Stats.hs  Voronoize.hs
examples/: update.sh
